framework/contracts/account/tests/snapshots/proxy__account_install_standalone_modules.snap
---
source: contracts/account/tests/proxy.rs
expression: all_storage
---
"abstract:account-local-0":
  - - "\u0000\u0002acabstract:standalone1"
    - "\"mock19mgty6vaq73rcsf37rlftheu92vpua0nkd2vsunma0dl00zetw0sjwwwst\""
  - - "\u0000\u0002acabstract:standalone2"
    - "\"mock1v0shv3l7z3dl7n6y8c98huwyw8lfye7xlhq0plasnl8xqdvtes7q5esd9x\""
  - - aa
    - "false"
  - - ab
    - "{\"name\":\"Default Abstract Account\"}"
  - - af
    - "[]"
  - - ag
    - "{\"trace\":\"local\",\"seq\":0}"
  - - ah
    - "[[{\"info\":{\"namespace\":\"abstract\",\"name\":\"standalone2\",\"version\":{\"version\":\"1.0.0\"}},\"reference\":{\"standalone\":12}},\"mock1v0shv3l7z3dl7n6y8c98huwyw8lfye7xlhq0plasnl8xqdvtes7q5esd9x\"]]"
  - - ai
    - "[]"
  - - contract_info
    - "{\"contract\":\"abstract:account\",\"version\":\"0.25.0\"}"
  - - ownership
    - "{\"owner\":{\"monarchy\":{\"monarch\":\"mock1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qwrtv4f\"}},\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:ans-host":
  - - be
    - "[]"
  - - cfg
    - "{\"next_unique_pool_id\":1}"
  - - contract_info
    - "{\"contract\":\"abstract:ans-host\",\"version\":\"0.25.0\"}"
  - - ownership
    - "{\"owner\":\"mock1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qwrtv4f\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:ibc-client":
  - - contract_info
    - "{\"contract\":\"abstract:ibc-client\",\"version\":\"0.25.0\"}"
  - - mod
    - "{\"module\":\"abstract:ibc-client\",\"version\":\"0.25.0\",\"dependencies\":[],\"metadata\":null}"
  - - ownership
    - "{\"owner\":\"mock1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qwrtv4f\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:ibc-host":
  - - contract_info
    - "{\"contract\":\"abstract:ibc-host\",\"version\":\"0.25.0\"}"
  - - ownership
    - "{\"owner\":\"mock1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qwrtv4f\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:module-factory":
  - - contract_info
    - "{\"contract\":\"abstract:module-factory\",\"version\":\"0.25.0\"}"
  - - da
    - "\"mock15n6av559ra8s98xgfnhc23d7vzr207q2j2m7cht5hrchw9mjc09qag5hf6\""
  - - ownership
    - "{\"owner\":\"mock1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qwrtv4f\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:registry":
  - - "\u0000\u0002cb\u0000\babstract\u0000\u0007account0.25.0"
    - "{\"account\":5}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\bans-host0.25.0"
    - "{\"native\":\"mock1awvrj8fm7khxxfllk06hqehrh6kg4m2wakt9x5w4zjmpwrgjx02snv3vdy\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\bibc-host0.25.0"
    - "{\"native\":\"mock1aaf9r6s7nxhysuegqrxv0wpm27ypyv4886medd3mrkrw6t4yfcns7ctvz5\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\bregistry0.25.0"
    - "{\"native\":\"mock1h9wzw84sqsmkylh43j64wdduww9l7xdznfptkqe3e0ytf3vx9h7quplk0z\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\nibc-client0.25.0"
    - "{\"native\":\"mock16jzpxp0e8550c9aht6q9svcux30vtyyyyxv5w2l2djjra46580wsgtnl4n\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\u000bstandalone11.0.0"
    - "{\"standalone\":11}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\u000bstandalone21.0.0"
    - "{\"standalone\":12}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\u000emodule-factory0.25.0"
    - "{\"native\":\"mock1lhx5jj47nwa64t4465szhxmdrehffpu8t5jjvhkat7yyqjtajdcszw3kpq\"}"
  - - "\u0000\u0002cc\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u000b"
    - "{\"namespace\":\"abstract\",\"name\":\"standalone1\",\"version\":{\"version\":\"1.0.0\"}}"
  - - "\u0000\u0002cc\u0000\u0000\u0000\u0000\u0000\u0000\u0000\f"
    - "{\"namespace\":\"abstract\",\"name\":\"standalone2\",\"version\":{\"version\":\"1.0.0\"}}"
  - - "\u0000\u0002ch\u0000\u0005local\u0000\u0000\u0000\u0000"
    - "\"mock15n6av559ra8s98xgfnhc23d7vzr207q2j2m7cht5hrchw9mjc09qag5hf6\""
  - - "\u0000\u0002cjabstract"
    - "{\"trace\":\"local\",\"seq\":0}"
  - - "\u0000\u0002ck\u0000\u0005local\u0000\u0000\u0000\u0000"
    - "\"abstract\""
  - - cfg
    - "{\"security_enabled\":false,\"namespace_registration_fee\":null}"
  - - ci
    - "1"
  - - contract_info
    - "{\"contract\":\"abstract:registry\",\"version\":\"0.25.0\"}"
  - - ownership
    - "{\"owner\":\"mock1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qwrtv4f\",\"pending_owner\":null,\"pending_expiry\":null}"
